--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,5 @@ include:
   - CONTRIBUTING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
-  - academics.md
-  - research.md
+  - ACADEMICS.md
+  - RESEARCH.md
